k8s/access-control/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulse8-core-access-control
  namespace: default
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      imagePullSecrets:
        - name: synpulse-jfrog-docker-credential
      containers:
        - image: synpulse.jfrog.io/s8-docker/synpulse-group-pulse8-core-access-control-62/merge:latest
          name: pulse8-core-access-control
          ports:
            - containerPort: 3010
              hostPort: 3010
              protocol: TCP
            - containerPort: 5010
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 3010
            initialDelaySeconds: 60
            periodSeconds: 15
            successThreshold: 1
          livenessProbe:
            tcpSocket:
              port: 3010
            initialDelaySeconds: 60
            periodSeconds: 15
