k8s/access-control/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulse8-core-access-control-service
  namespace: default
spec:
  ports:
    - name: service
      protocol: TCP
      port: 3010
      targetPort: 3010
    - name: debug
      protocol: TCP
      port: 5010
      targetPort: 5010
  type: ClusterIP
